<resources>
    <string name="app_name">Sanal Dolabim</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="lbl_overhead">Selection for Overhead</string>
    <string name="lbl_face">Selection for Face</string>
    <string name="lbl_upper_body">Selection for Upper Body</string>
    <string name="lbl_lower_body">Selection for Lower Body</string>
    <string name="lbl_foot">Selection for Foot</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_select_combine">Select Combine</string>
    <string name="lbl_selected_combine_success">Combine selected successfully!</string>
    <string-array name="clothes_category_array">
        <item>Overhead</item>
        <item>Face</item>
        <item>UpperBody</item>
        <item>LowerBody</item>
        <item>Foot</item>
    </string-array>
    <string-array name="clothes_type_arrays">
        <item>T-shirt/Shirt</item>
        <item>Hat</item>
        <item>Shoes</item>
        <item>Trousers</item>
        <item>Dress</item>
        <item>Jackets</item>
        <item>Slippers</item>
        <item>Shorts</item>
        <item>Headband</item>
        <item>Sun Glasses</item>
        <item>Face Shield</item>
        <item>Face Mask</item>
    </string-array>
    <string-array name="clothes_pattern_arrays">
        <item>Plain</item>
        <item>Checked</item>
        <item>Spotted</item>
        <item>Striped</item>
        <item>Flowery</item>
    </string-array>
</resources>