<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CabinActivity">

    <TextView
        android:id="@+id/cabinTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="MAKE YOUR COMBINE!" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/cabinActivityQuestion"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Want to see past combines?"
            app:layout_constraintEnd_toStartOf="@+id/btnGoPastCombines"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGoPastCombines"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#4CAF50"
            android:onClick="onGoCombines"
            android:text="Go!"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toEndOf="@+id/cabinActivityQuestion"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/lbl_overhead" />

            <ImageView
                android:id="@+id/imageViewOverhead"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRemoveOver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F44336"
                    android:text="Remove" />

                <Button
                    android:id="@+id/btnSelectOverhead"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="Select" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/lbl_face" />

            <ImageView
                android:id="@+id/imageViewFace"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRemoveFace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F44336"
                    android:text="Remove" />

                <Button
                    android:id="@+id/btnSelectFace"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="Select" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/lbl_upper_body" />

            <ImageView
                android:id="@+id/imageViewUpperBody"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRemoveUpper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F44336"
                    android:text="Remove" />

                <Button
                    android:id="@+id/btnSelectUpperBody"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="Select" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/lbl_lower_body" />

            <ImageView
                android:id="@+id/imageViewLowerBody"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRemoveLower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F44336"
                    android:text="Remove" />

                <Button
                    android:id="@+id/btnSelectLowerBody"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="Select" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/lbl_foot" />

            <ImageView
                android:id="@+id/imageViewFoot"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRemoveFoot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F44336"
                    android:text="Remove" />

                <Button
                    android:id="@+id/btnSelectFoot"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="Select" />
            </LinearLayout>

            <EditText
                android:id="@+id/newCombineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="Enter a name for your fresh combine!"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnSaveCombine"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="100dp"
                android:backgroundTint="#4CAF50"
                android:gravity="center"
                android:text="Save Combine!" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>